# paper-search-rs

./: .gitignore  Cargo.toml  README.md  config.example.yaml  pyproject.toml
.codex/agents/: debug.toml  dispatch.toml  plan.toml
.github/workflows/: ci.yml
docs/: README.md  README.zh-CN.md  releasing.md
npm/: package.json
npm/lib/: platform.cjs
npm/test/: platform.test.cjs
scripts/: check-release-versions.mjs  release-artifacts.mjs  release-contract.mjs  smoke-npm-local.mjs  smoke-uvx-local.sh  stage-npm-binary.mjs  test-release-validation.mjs
src/: config.rs  error.rs  lib.rs  main.rs  model.rs
src/infra/: cache.rs  http.rs  mod.rs  rate_limit.rs  retry.rs
src/jcr/: loader.rs  mod.rs  model.rs  service.rs  updater.rs
src/mcp/: server.rs
src/paper_search_mcp/: __main__.py  config.py  models.py
src/paper_search_mcp/jcr/: loader.py  models.py  updater.py
src/paper_search_mcp/search/: __init__.py  arxiv.py  base.py  biorxiv.py  crossref.py  google_scholar.py  openalex.py  pubmed.py  scopus.py  semantic_scholar.py  webofscience.py
src/paper_search_mcp/tools/: paper_search.py
src/paper_search_mcp/utils/: cache.py  proxy.py  rate_limiter.py  retry.py
src/providers/: arxiv.rs  mod.rs  scopus.rs  semantic_scholar.rs  web_of_science.rs
src/search/: dedup.rs  filter.rs  mod.rs  service.rs
tests/: live_smoke.rs  mcp_stdio.rs  test_jcr_auto_update.py  test_jcr_lookup.py  test_paper_search_contract.py  test_paper_search_integration.py
