[package]
name = "paper-search-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "A native MCP server for academic paper search"
license = "Apache-2.0"
repository = "https://github.com/sheauhuu/paper-search-rs"

[lib]
name = "paper_search_rs"
path = "src/lib.rs"

[[bin]]
name = "paper-search-rs"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
dirs = "6"
flate2 = "1"
futures = "0.3"
httpdate = "1"
moka = { version = "0.12", features = ["future"] }
quick-xml = { version = "0.38", features = ["serialize"] }
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "socks", "stream"] }
rmcp = { version = "=2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = { version = "1.1", features = ["chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1"
url = "2"

[dev-dependencies]
rmcp = { version = "=2.2.0", default-features = false, features = ["client", "transport-child-process"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
