[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-search-mcp"
version = "0.1.0"
description = "A Python MCP server for searching academic papers across multiple platforms"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "sheauhuu" },
]
dependencies = [
  "fastmcp>=2.0",
  "mcp[cli]>=1.6.0",
  "httpx[socks]>=0.28",
  "pydantic>=2.0",
  "typer>=0.12",
  "loguru>=0.7",
  "feedparser>=6.0",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

[project.scripts]
paper-search-mcp = "paper_search_mcp.__main__:main"
paper-search = "paper_search_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_search_mcp"]
