[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "paper-search-rs"
dynamic = ["version"]
description = "Native stdio MCP server for academic paper search"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/sheauhuu/paper-search-rs"
Repository = "https://github.com/sheauhuu/paper-search-rs"
Issues = "https://github.com/sheauhuu/paper-search-rs/issues"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
locked = true
strip = true
